# magic-video-fixer

./: CMakeLists.txt  README.md  compile.sh  config.txt  ssim_y.txt
src/: ChallengeSolver.cpp  ChallengeSolver.h  Frame.cpp  Frame.h  Hungarian.h  NaiveSolver.cpp  NaiveSolver.h  Sequence.cpp  Sequence.h  Solver.h  SolverFabricator.cpp  SolverFabricator.h  SolverImplem.h  main.cpp  settings.cpp  settings.h  ssim.cpp  ssim.h  ssim_thread.cpp  ssim_thread.h
